# soft-body-models

./: .gitmodules  CMakeLists.txt  check_mesh.cpp  check_tet_mesh_hierarchy.cpp  convert_triangle_mesh_format.cpp  surface_from_tet.cpp  tet_mesh_viewer.cpp  tetgen_tetrahedralize.cpp
surface/: bunny_T7162.ply  bunny_T83988.ply  octopus.ply  octopusv10block_fixed_sc055.ply  squirrel.ply
volume/: 1tet.mesh  armadillo_1.mesh  armadillo_2.mesh  armadillo_3.mesh  armadillo_4.mesh  armadillo_5.mesh  armadillo_6.mesh  armadillo_7.mesh  armadillo_8.mesh  armadillo_T2970.mesh  bar.mesh  bunny.mesh  bunny_1.mesh  bunny_2.mesh  bunny_3.mesh  bunny_4.mesh  bunny_5.mesh  bunny_6.mesh  bunny_T1529.mesh  bunny_T7162.mesh  bunny_T83988.mesh  bunny_T83988.ply  octopus.mesh  octopus_1.mesh  octopus_2.mesh  octopus_3.mesh  octopus_4.mesh  octopus_5.mesh  spot.mesh  spot_0.mesh  spot_1.mesh  spot_2.mesh  squirrel_0.mesh  squirrel_1.mesh  squirrel_2.mesh  squirrel_3.mesh  squirrel_4.mesh  squirrel_5.mesh  squirrel_6.mesh  squirrel_7.mesh
